--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -634,6 +634,7 @@
                     <option value="covers/cover-seattle.png">Map - Seattle</option>
                     <option value="covers/cover-new-york.png">Map - New York</option>
                     <option value="covers/cover-kansas.png">Map - Kansas</option>
+                    <option value="covers/cover-iso.png">Work in Progress - Dungeon</option>
                 </optgroup>
                 <optgroup label="Detail">
                     <option value="details/details-basic-dot.png">Basic - Dots</option>
