--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -645,7 +645,7 @@
                     <option value="inner/inner-grid.png">1/4" Grid</option>
                     <option value="inner/inner-line.png">1/4" Line Rule</option>
                     <option value="inner/inner-iso.png">1/4" Isometric Grid</option>
-                    <option value="inner/inner-hex.png">1" Hexagon</option>
+                    <option value="inner/inner-hex.png">1/2" Hexagon</option>
                     <option value="inner/inner-left-line-right-dot.png">1/4" Line Rule | Dots</option>
                     <option value="inner/inner-left-dot-right-line.png">1/4" Dots | Line Rule</option>
                 </optgroup>
