--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -634,7 +634,8 @@
                     <option value="covers/cover-seattle.png">Map - Seattle</option>
                     <option value="covers/cover-new-york.png">Map - New York</option>
                     <option value="covers/cover-kansas.png">Map - Kansas</option>
-                    <option value="covers/cover-iso.png">Work in Progress - Dungeon</option>
+                    <option value="covers/cover-iso.png">Iso Dungeon</option>
+                    <option value="covers/cover-grid-dice.png">Grid Dice</option>
                 </optgroup>
                 <optgroup label="Detail">
                     <option value="details/details-basic-dot.png">Basic - Dots</option>
