--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -751,6 +751,7 @@
                     <option value="covers/cover-kansas.png">Map - Kansas</option>
                     <option value="covers/cover-iso.png">Iso Dungeon</option>
                     <option value="covers/cover-grid-dice.png">Grid Dice</option>
+                    <option value="covers/cover-grid-survival-guide.png">Grid Survival Guide</option>
                 </optgroup>
                 <optgroup label="Detail">
                     <option value="details/details-basic-blank.png">Basic - Blank</option>
