elder scrolls cover

--- a/journal-generator/index.html
+++ b/journal-generator/index.html
@@ -751,7 +751,8 @@
                     <option value="covers/cover-kansas.png">Map - Kansas</option>
                     <option value="covers/cover-iso.png">Iso Dungeon</option>
                     <option value="covers/cover-grid-dice.png">Grid Dice</option>
-                    <option value="covers/cover-grid-survival-guide.png">Grid Survival Guide</option>
+                    <option value="covers/cover-grid-survival-guide.png">Grid Fallout Survival Guide</option>
+                    <option value="covers/cover-grid-elder-scrolls.png">Grid Elder Scrolls</option>
                 </optgroup>
                 <optgroup label="Detail">
                     <option value="details/details-basic-blank.png">Basic - Blank</option>
